# libpd

./: .gitignore
cffi/: Makefile  README.md  build.py  setup.py  test.py
cffi/libpd/: __init__.py  _libpd_build.py
cffi/tests/: test_audio.py
pybind/: CMakeLists.txt  Makefile  README.md  all_includes.hpp  build.sh  config.txt  setup.py
pybind/bind/: PdBase.cpp  PdTypes.cpp  libpd.cpp  libpd.modules  libpd.sources
pybind/include/: PdBase.hpp  PdMidiReceiver.hpp  PdReceiver.hpp  PdTypes.hpp
pybind/src/: libpd.cpp
pybind/tests/test_buffer/: test_buffer.cpp
pybind/tests/test_pd/: test_pd.py
pyx/: .gitignore  Makefile  README.md  TODO.md  build.sh  build_test_audio.sh  cypd-api-ref.pyx  cypd.pyx  demo.py  demo.pyx  go.py  helper.c  libpd-api-ref.h  libpd.pxd  libpd.pyx  libportaudio.mk  libportaudio.pxd  pd.pxd  pd.pyx  pdbase.pyx  pdtypes.pyx  pylibd-REMAINING.c  pylibpd.pyx  setup.py  setup_libpd.py  test2.pd  test_audio.c  test_cysounddevice_sound.py  test_pd.py
pyx/doc/: libpd-api-comparison.md  libpd.md  links.md  notes.md
pyx/doc/archive/: libpd.abrev.pxd  task.c  (+3 more)
pyx/mini/: libminiaudio.pxd  mini.pyx  setup.py
pyx/portaudio/: BUILDING_PORTAUDIO.md
pyx/pylibd/: pylibd-ext.c  pylibd.c  to-fix.c
pyx/test_swig_pylibpd/: nogui-test.sh  test_pylibpd_pyaudio2.py
pyx/tests/: minimal.c  task.c  task.h  test_atom.py  test_cypd.py  test_cypd2.py  test_cypd5.py  test_cypd_audio.py  test_cypd_play.py  test_demo_audio.py  test_libpd_audio.py  test_libpd_full.py  test_msg_send.py  test_pd.py  test_pd_audio.py  test_pd_play.py
samples/python/: test2.py
(+69 files in other folders)
